[project]
name = "fastapi-oauth-client"
version = "0.1.0"
readme = "README.md"
authors = [{ name = "Ashwin A Nayar", email = "ashwin5059198@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]",
    "authlib",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
